Completed Bonus Mission - Add CSS Stylesheet

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,17 +2,10 @@
 <html>
     <head>
         <title>Build a Blog</title>
-        <style>
-            h1 {
-                text-align: center;
-            }
-            .error {
-                color: red;
-            }
-        </style>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}"/>
     </head>
     <body>
-        <div>
+        <div class="navigation">
             <a href="/blog">Main Blog Page</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/newpost">Add a Blog Entry</a>
         </div>
 
