--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     {% if blogs|length == 0 %}
+    <main class="container">
         <h1>{{ title }}</h1>
         <p>No blogs yet</p>
     {% else %}
@@ -9,14 +10,14 @@
             <h1>{{ title }}</h1>
             {% for blog in blogs %}
                 <h2><a href="/blog?id={{ blog.id }}">{{ blog.title }}</a></h2>
-                <p>{{ blog.body }}</p>
-                <hr />
+                <p class="blog-post-content">{{ blog.body }}</p>
             {% endfor %}
         {% else %}
             {% for blog in blogs %}
-                <h1>{{ blog.title }}</h1>
-                <p>{{ blog.body }}</p>
+                <h2>{{ blog.title }}</h2>
+                <p class="blog-post-content">{{ blog.body }}</p>
             {% endfor %}
         {% endif %}
+    </main>
     {% endif %}
 {% endblock %}
